# mp2-lab5-PolynomialCalculater

./: CMakeLists.txt  README.md  Отчёт.docx
core/include/: Automat.hpp  Data.hpp  DoublyLinkedList.hpp  Interpreter.hpp  Monom.hpp  Polynomial.hpp  ProgramMemory.hpp  convertations.hpp  functions.hpp  includes.hpp
core/include/containers/: AVLTree.hpp  Container.hpp  HashTableCA.hpp  HashTableOA.hpp  OrderedTable.hpp  PrefixTree.hpp  RedBlackTree.hpp  UnorderedTable.hpp
core/src/: Automat.cpp  Data.cpp  Interpreter.cpp  Monom.cpp  Polynomial.cpp  ProgramMemory.cpp  empty_file.cpp  functions.cpp
interface/: console_interface.cpp
tests/: test_Automat.cpp  test_Containers.cpp  test_DoublyLinkedList.cpp  test_Interpreter.cpp  test_Monom.cpp  test_Polynomial.cpp  test_PrefixTree.cpp  test_just_empty_test_file.cpp  test_trees.cpp
